styles/store.css
.steamdb_link {
	color: #898A8C;
}

.steamdb_link:hover {
	text-decoration: underline;
}

.steamdb_error_link {
	display: block;
	margin-top: 12px;
}

.steamdb_float_left {
	float: left;
}

.btn_steamdb .ico16 {
	background: none;
}

.steamdb_last_update_old {
	color: #f44336 !important;
}

.steamdb_last_update_old:after {
	display: inline-block;
	content: " ⚠️️";
}

.steamdb_stats_logo {
	width: 54px;
	height: 54px;
	float: left;
	margin-right: 10px;
	opacity: 0.5;
	transition: opacity .1s ease-in-out;
}

.steamdb_stats:hover .steamdb_stats_logo {
	opacity: 1;
}

.steamdb_stats b {
	color: #67c1f5;
	min-width: 60px;
	margin-right: 5px;
	display: inline-block;
	text-align: right;
}

.steamdb_stats p:last-child {
	margin-bottom: 0;
}

.glance_ctn .release_date + .steamdb_last_update {
	margin-top: -13px;
	padding-bottom: 13px;
}

.steamdb_last_update a {
	display: block;
}

/**
 * Fix for very long game names not overflowing correctly
 */
.apphub_AppName {
	word-wrap: break-word;
}

